# TestTask

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  requirements.txt
backend/api/: __init__.py
backend/api/api_v1/: __init__.py  orders.py
backend/core/: config.py
backend/core/models/: __init__.py
backend/log_core/: utils.py
backend/utils/: raise_http_exception.py
backend/walk/: crud.py  models.py  schemas.py
instruction/: alembic_command.md
