[tool.poetry]
package-mode = false
name = "testtask-backend"
version = "0.1.0"


[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pydantic = {extras = ["email"], version = "2.7.1"}
pydantic-settings = "2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "2.0.30"}
asyncpg = "0.29.0"
alembic = "1.13.1"
black = "24.4.2"
loguru = "0.7.2"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"

